<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etMesNascimento"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/etMesNascimento"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAnoNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/btnCalcula"
        app:layout_constraintBottom_toTopOf="@+id/tvIdade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaNascimento" />

    <EditText
        android:id="@+id/etDiaNascimento"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/etDiaNascimento"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMesNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDiaNascimento"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="307dp"
        android:text="@string/tvDiaNascimento"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAnoNascimento"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:text="@string/tvAnoNascimento"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etAnoNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMesNascimento"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:text="@string/tvMesNascimento"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etMesNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAnoNascimento"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/etAnoNascimento"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginBottom="203dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcula" />
</androidx.constraintlayout.widget.ConstraintLayout>